# spws-automated-ranklist

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  Project Specification. SPWS Automated Ranklist System.md  README.md  deployed_migrations.json  postgres-language-server.jsonc  pyproject.toml  release-manifest.json
.claude/: launch.json  settings.json
.github/: copilot-instructions.md
.github/workflows/: _debug-read-season.yml  ci.yml  deploy.yml  evf-parity-sweep.yml  evf-sync.yml  export-seed.yml  ftl-seed.yml  ingest.yml  (+10 more)
doc/: DB-data_staging_plan.md  Go-to-PROD.md  MVP_development_plan.md  POC_development_plan.md  Project Specification. SPWS Automated Ranklist System.html  Project Specification. SPWS Automated Ranklist System.md  SPWS_ranking_template.xlsm  SZPADA-2-2024-2025.xlsx  adr041_refresh_ux_plan.md  cicd-operations-manual.html  cicd-operations-manual.md  dartagnan_scraper_plan.md  development_history.html  development_history.md  evf_calendar_promote_plan.md  index.html  ingestion-pipeline-design.html  ingestion-pipeline-design.md  ingestion_pipeline_NEW_design.html  ingestion_pipeline_NEW_design.md  m10_execution_plan.md  m8_implementation_plan.md  requirements-traceability-matrix.html  requirements-traceability-matrix.md  staging_data_mock.ods  telegram-ingest-command-gas.html  telegram-ingest-command-gas.md
frontend/: index.ce.html  index.html  package-lock.json  package.json  playwright.config.ts  register.html  tsconfig.json  vite.config.ce.ts  vite.config.ts
reference/: SZPADA-2-2024-2025.xlsx
scripts/: apply-migrations.sh  build_doc_inventory.py  check-coherence.sh  check-new-migrations.sh  check-security-posture.sh  check-spec-sync.sh  check_docs.py  export-prod.sh  gas_email_ingestion.js  generate-manifest.sh  graphify_refresh.py  load-cert-ref.sh  mirror-prod.sh  refresh-graph.sh  render_adrs.py  render_docs.py  reset-dev.sh  schema-fingerprint.sh  seed-remote.sh  snapshot-events.sh  update-test-values.sh  update-tracking.sh
supabase/: config.toml  seed.sql  seed_event_snapshot.sql  seed_local_2026-04-30.sql  seed_local_2026-05-03.sql  seed_local_2026-05-10.sql  seed_phase5_increments.sql  seed_post_backfill.sql  seed_prod_2026-04-12.sql  seed_prod_2026-04-13.sql  seed_prod_2026-04-20.sql  seed_prod_2026-04-21.sql  seed_prod_2026-04-26.sql  seed_prod_2026-05-11.sql  seed_prod_2026-05-17.sql  seed_prod_2026-06-03.sql  seed_prod_2026-06-13.sql  seed_prod_2026-06-19.sql  seed_prod_2026-06-28.sql  seed_prod_2026-07-19.sql  seed_prod_latest.sql  seed_tbl_fencer.sql
(+1239 files in other folders)
