[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[project]
name = "spws-ranklist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.9",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "odfpy>=1.4",
    "supabase>=2.4",
    "pypdf>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "psycopg2-binary>=2.9",
    "basedpyright>=1.21",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring live external APIs (deselect with -m 'not integration')",
]

[tool.basedpyright]
include = ["python"]
exclude = ["**/__pycache__", "**/node_modules", "frontend"]
pythonVersion = "3.14"
typeCheckingMode = "standard"   # start non-strict to avoid a wall of findings on legacy code

[tool.ruff]
target-version = "py311"        # matches requires-python = ">=3.11"
line-length = 100               # matches editor.rulers = [100] in .vscode/settings.json
src = ["python"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]   # pyflakes/pycodestyle/isort/pyupgrade/bugbear — sane default
# E501 (line-too-long) is owned by the formatter, not the linter: `ruff format`
# wraps everything structurally breakable to line-length, and CI's `ruff format
# --check` step enforces that. The lines E501 would still flag are unbreakable
# strings/URLs/SQL fragments, plan-ID docstrings, and fluent mock chains — wrapping
# those by hand only hurts readability/grep. This is Ruff's recommended config when
# the formatter is in use.
ignore = ["E501"]
